<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.salesforce.apollo</groupId>
    <version>0.0.1-SNAPSHOT</version>
    <artifactId>demesnes</artifactId>
    <name>Demesnes: Apollo Enclave Model</name>
    <description>Apollo isolate model for the GraalVM</description>

    <properties>
        <compiler.dir>${project.build.directory}/compiler</compiler.dir>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <native.maven.plugin.version>0.9.15</native.maven.plugin.version>
        <mainClass>com.salesforce.apollo.domain.Demesne</mainClass>
        <imageName>demesnes</imageName>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.salesforce.apollo</groupId>
            <artifactId>model</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.4</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.7.0</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>java</id>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>${mainClass}</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>assemble-all</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>${native.maven.plugin.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>build-native</id>
                        <goals>
                            <goal>compile-no-fork</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                <configuration>
                  <agent>
                    <enabled>true</enabled>
                    <options><!-- shared options -->
                        <option>experimental-class-loader-support</option>
                    </options>
                    <options name="periodic-config"><!-- periodic-config options -->
                        <option>config-write-period-secs=5</option>
                        <option>config-write-initial-delay-secs=5</option>
                    </options>
                  </agent>
                    <buildArgs> 
                     --initialize-at-build-time=org.jooq
                     --initialize-at-build-time=javax.sql.rowset.RowSetProvider
                     --initialize-at-build-time=org.slf4j.LoggerFactory
                     --initialize-at-build-time=ch.qos.logback
                     --initialize-at-run-time=org.jooq.impl.Convert$_JSON
                     --initialize-at-run-time=org.jooq.tools.Convert
                     --initialize-at-run-time=org.jooq.impl.Convert$_XML
                     --initialize-at-run-time=org.jooq.impl.DefaultRenderContext
                     --add-modules java.sql.rowset
                     --trace-object-instantiation=com.fasterxml.jackson.databind.ObjectMapper
                     --trace-class-initialization=jakarta.xml.bind.ContextFinder
                     --trace-class-initialization=org.slf4j.MDC
                     </buildArgs>
                    <isDetectionRestrictedToModuleDependencies>false</isDetectionRestrictedToModuleDependencies>
                    <debug>true</debug>
                    <verbose>true</verbose>
                    <metadataRepository>
                        <enabled>true</enabled>
                    </metadataRepository>
                    <fallback>true</fallback>
                    <verbose>true</verbose>
                    <classpath>
                        <param>${project.build.directory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</param>
                    </classpath>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>graalvm-reachability-metadata</artifactId>
                        <version>${native.maven.plugin.version}</version>
                        <classifier>repository</classifier>
                        <type>zip</type>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>java-agent</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>java</executable>
                                    <workingDirectory>${project.build.directory}</workingDirectory>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath />
                                        <argument>${mainClass}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>native</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${project.build.directory}/${imageName}</executable>
                                    <workingDirectory>${project.build.directory}</workingDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>